can compose and is tested, chatting works fine
