# src/swagger.json
@@ -1549,6 +1549,53 @@
 				]
 			}
 		},
+		"/simple-conversation": {
+			"get": {
+				"operationId": "Chat",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Simple Conversation"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "assistantId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "message",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "chatId",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/sessions": {
 			"post": {
 				"operationId": "CreateSession",
@@ -3766,7 +3813,7 @@
 	},
 	"servers": [
 		{
-			"url": "http://localhost:3000/"
+			"url": "http://localhost:3001/"
 		}
 	]
 }
